--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.4
 
 before_script:
+  - php composer.phar install --dev
   - wget http://cs.sensiolabs.org/get/php-cs-fixer.phar
 
 script:
