--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ php:
   - 5.4
 
 before_script:
-  - php composer.phar install --dev
+  - composer self-update
+  - composer install --dev
   - wget http://cs.sensiolabs.org/get/php-cs-fixer.phar
 
 script:
